# game-of-life-web

./: Cargo.toml  README.md  index.js  package-lock.json
src/: lib.rs
www/: index.html  index.js  worker.js
