[package]
name = "game-of-life-web"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
env_logger = "0.9.0"
log = "0.4.16"
wasm-bindgen = "0.2.80"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.57", features = ["CanvasRenderingContext2d", "ImageData"] }
